# portfolio

./: app.py  pyproject.toml
static/: script.js  style.css
templates/: index.html
